bin/testsuite/tests/compiler/src/errors/compiler1911.swg
#global testerror "Err0686"

#test
{
    if(#tag(6))
    {

    }
}